# region-cn

./: .gitignore  Cargo.toml  README.md
.github/workflows/: region-cn.yml
data/: region.py  region.sql  region.txt  region_full.txt
examples/: region.rs
src/: lib.rs  region.rs  trie.rs  utils.rs
