[package]
name = "region-cn"
version = "0.1.10"
edition = "2021"
authors = ["bujnlc8 <75124771@qq.com>"]
description = "A lib to search chinese region by 6-digit administrative code with trier or search in place."
repository = "https://github.com/bujnlc8/region-cn"
license = "MIT"
keywords = ["region-code", "chinese-region", "region"]
exclude = ["data/", "region-code.png"]

[dependencies]
encoding = "0.2.33"

[dev-dependencies]
serde_json = "1.0.128"
